# algeriastartupjobs.com

./: .gitignore  LICENSE  README.md
.github/workflows/: build-api.yml
api/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  development.env  quickwit.Dockerfile  surrealdb.Dockerfile
api/db/main/migrations/: 0001_create_account_table.sql  0001_init.sql  0002_create_tag_table.sql  0003_create_post_table.sql  0004_create_task_table.sql  0005_tag_lug_index.sql  0006_create_draft_table.sql
api/db/search/migrations/: 0001_create_word_table.sql  0001_init.sql
api/src/: main.rs
api/src/_entry/: app.rs  database.rs  mod.rs  state.rs
api/src/_entry/layers/: cors.rs  mod.rs  trace.rs
api/src/_entry/servers/: config.rs  local.rs  loopback.rs  mod.rs
api/src/_test/: controller.rs  requests.http  test_requests.http
api/src/_utils/: database.rs  error.rs  fuzzy_word_exists.rs  is_admin.rs  mod.rs  post_long_title.rs  post_url.rs  query.rs  string.rs  vec.rs
api/src/account/: controller.rs  mocks.rs  mod.rs  model.rs  repository.rs
api/src/ai/: service.rs
api/src/auth/: controller.rs  service.rs
api/src/category/: mocks.rs  model.rs  repository.rs
api/src/config/: service.rs
api/src/email/: service.rs
api/src/import/: controller.rs
api/src/imported_content/: controller.rs  cron_job.rs  mod.rs  model.rs  repository.rs  service.rs
api/src/job_post/: controller.rs
api/src/milestones/: controller.rs
api/src/post/: controller.rs  controllers.rs  mocks.rs  mod.rs  model.rs  repository.rs
api/src/search/: controller.rs  cron_job.rs  mod.rs  model.rs  service.rs
api/src/security/: service.rs
api/src/tag/: controller.rs  mocks.rs  model.rs  repository.rs
api/src/task/: model.rs  repository.rs
api/src/utils/: error.rs  mod.rs  vec.rs
api/src/web/: controller.rs
infra/: .gitignore  README.md
infra/api/: .terraform.lock.hcl  main.tf
infra/api/backup-db/: .terraform.lock.hcl  main.tf
infra/api/build-on-vps/: .terraform.lock.hcl  blank-tfstate.json  main.tf
infra/api/upload-db-backup/: main.tf
infra/shared/: .terraform.lock.hcl  main.tf
infra/shared-route53/: .terraform.lock.hcl  main.tf
infra/web/: .terraform.lock.hcl  main.tf
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/_entry/: app.tsx  index.tsx  providers.tsx  style.css
web/src/_routes/: index.tsx  types.ts
web/src/components/button/: index.tsx  style.css
web/src/components/dialog/: index.tsx  style.css
web/src/components/divider/: index.tsx  style.css
web/src/components/error-boundary-provider/: index.tsx
web/src/components/footer/: index.tsx
web/src/components/icon/: index.tsx  style.css
web/src/models/: account.ts  category.ts  post.ts  tag.ts
web/src/pages/: index.tsx
web/src/state/: index.ts  slices.ts
web/src/types/: __global.d.ts
web_scraper/: .gitignore  Readme.md  forge.config.ts  package-lock.json  package.json  tsconfig.json
web_scraper/src/_entry/: index.ts
web_scraper/src/_test/: scrape.http
(+109 files in other folders)
