[package]
name = "algeriastartupjobs-api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/algeriastartupjobs/algeriastartupjobs.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.16"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_json = "1"
local-ip-address = "0.5.1"
titlecase = "2.2.1"
regex = "1.8.1"
utility-types = "0.0.2"
rust-fuzzy-search = "0.1.1"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
fake = { version = "2.6", features = ['derive'] }
rand = "0.8"
strum_macros = "0.24.3"
slug = "0.1.4"
dotenv = "0.15.0"
tokio-cron-scheduler = "0.9.4"

[dev-dependencies]
cargo-watch = "8.4.0"
