[package]
name = "algeriastartupjobs-api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/algeriastartupjobs/algeriastartupjobs.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.16", features = ["headers"] }
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde_json = "1"
local-ip-address = "0.5.1"
titlecase = "2.2.1"
utility-types = "0.0.2"
rust-fuzzy-search = "0.1.1"
rand = "0.8"
strum_macros = "0.25.1"
slug = "0.1.4"
dotenv = "0.15.0"
tokio-cron-scheduler = "0.9.4"
bk-tree = "0.5.0"
itertools = "0.11.0"
reqwest = { version = "0.11.17", features = ["json"] }
sled = "0.34.7"
chrono = "0.4.26"
jsonwebtoken = "8.3.0"
sentry = { version = "0.31.5", features = ["tracing", "tower", "tower-http"] }
sentry-tracing = "0.31.5"
sentry-tower = "0.31.5"
sitewriter = "1.0.2"
futures-util = "0.3.28"
tokio-stream = "0.1.14"
fs = "0.0.5"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
async-stream = "0.3.5"

[dev-dependencies]
cargo-watch = "8.4.0"
